lined up role label with participants role

--- a/src/app/pages/feature/editparticipants/editparticipants.page.html
+++ b/src/app/pages/feature/editparticipants/editparticipants.page.html
@@ -57,7 +57,7 @@
         </ion-select>
       </ion-item>
       <ion-item lines="none">
-        <ion-label slot="start">
+        <ion-label>
           Current Participants
         </ion-label>
         <ion-label>
@@ -78,7 +78,7 @@
         </ion-avatar>
         <ion-label>{{user.first_name}} {{user.last_name}}</ion-label>
         <ion-label>{{user.role}}</ion-label>
-        <ion-button slot="end">Chat</ion-button>
+        <ion-button>Chat</ion-button>
       </ion-item>
     </ion-list>
 
