added sorting click function to row labels

--- a/src/app/pages/feature/editparticipants/editparticipants.page.html
+++ b/src/app/pages/feature/editparticipants/editparticipants.page.html
@@ -57,10 +57,10 @@
         </ion-select>
       </ion-item>
       <ion-item lines="none">
-        <ion-label>
+        <ion-label (click)="sortDisplay('participant')">
           Current Participants
         </ion-label>
-        <ion-label>
+        <ion-label (click)="sortDisplay('role')">
           Role
         </ion-label>
       </ion-item>
