--- a/src/app/pages/feature/manage/managefeature.page.scss
+++ b/src/app/pages/feature/manage/managefeature.page.scss
@@ -21,7 +21,7 @@ app-managefeature {
     height: 100%;
   }
 
-  ion-header {
+  .desktop-header {
     padding: 30px 0;
     background-color: transparent !important;
     box-shadow: none !important;
