--- a/src/app/pages/feature/manage/managefeature.page.scss
+++ b/src/app/pages/feature/manage/managefeature.page.scss
@@ -27,17 +27,13 @@ app-managefeature {
     box-shadow: none !important;
 
     --background: transparent !important;
-  }
 
-  .slides-md {
-    padding: 0 30px !important;
-  }
-
-  ion-slide {
-    box-shadow: 0 5px 10px rgba(0,0,0,.2);
-    padding: 10px;
-    margin: 15px 0;
-    border-radius: 10px;
+    ion-slide {
+      box-shadow: 0 5px 10px rgba(0,0,0,.2);
+      padding: 10px;
+      margin: 15px;
+      border-radius: 10px;
+    }
   }
 
   .selected {
