--- a/src/app/pages/user/dashboard/dashboard.page.html
+++ b/src/app/pages/user/dashboard/dashboard.page.html
@@ -32,7 +32,7 @@
     <ion-title slot="start" *ngIf="view === 'profile'">Me</ion-title>
     <ion-title slot="start" *ngIf="view === 'calendar'">Calendar</ion-title>
       <!--<ion-searchbar class="header-searchbar" [(ngModel)]="searchKeyword" debounce="500" (ionChange)="executeSearch($event)" (ionCancel)="cancelSearch($event)" *ngIf="platform.width() >= 768 && !platform.is('ios')" slot="start"></ion-searchbar>-->
-    <ion-item lines="none" routerLink="/app/user/profile" *ngIf="userData.user && platform.width() >= 768" slot="end" mode="md" style="--background: transparent">
+    <ion-item lines="none" routerLink="/app/me" *ngIf="userData.user && platform.width() >= 768" slot="end" mode="md" style="--background: transparent">
       <ion-avatar slot="start">
         <ion-img *ngIf="userData.user && userData.user.avatar" [src]="userData.user.avatar"></ion-img>
         <ion-img *ngIf="!userData.user || !userData.user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
@@ -54,32 +54,33 @@
 
 <ion-content *ngIf="userData.user">
   <ion-grid style="height: 100%" *ngIf="ionSpinner">
-    <ion-row class="ion-justify-content-start ion-align-items-center" style="height: 100%">
+    <ion-row class="ion-align-items-center" style="height: 100%">
       <ion-spinner name="dots"></ion-spinner>
     </ion-row>
   </ion-grid>
   <div class="content-container" [ngStyle]="{'background': platform.width() >= 768 ? 'var(--ion-color-secondary)' : 'var(--ion-color-lightgrey)'}">
-    <ion-row class="profile-row">
-      <ion-card class="profile-card" [ngClass]="{'mobile-card': platform.width() < 768}" *ngIf="view === 'profile'">
-        <ion-item lines="none">
+    <ion-row class="profile-row md hydrated">
+      <ion-card class="profile-card md hydrated" [ngClass]="{'mobile-card': platform.width() < 768}">
+        <ion-item lines="none" class="item md item-lines-none ion-focusable hydrated">
           <div class="person-photo-container">
             <ion-avatar class="person-avatar">
-              <img class="person-avatar" [src]="userData.user.avatar">
+              <img class="person-avatar" *ngIf="userData.user.avatar" [src]="userData.user.avatar" onerror="this.src='assets/img/avatar-default.jpg'"/>
+              <img *ngIf="!userData.user.avatar" src="assets/img/avatar-default.jpg"/>
             </ion-avatar>
           </div>
-          <div class="person-content-left">
-            <ion-card-title class="person-name">
-              {{userData.user.first_name}} {{userData.user.last_name}}
+          <div class="person-content-left"> 
+            <ion-card-title class="person-name ion-inherit-color md hydrated" role="heading" aria-level="2">{{userData.user.first_name}} {{userData.user.last_name}} 
+              <span *ngIf="userData.user.role === 'Contact' || userData.user.role === 'Pending'">{{userData.user.name}}
+              </span>
             </ion-card-title>
-            <div class="person-title" [innerHTML]="userData.user.bio"></div>
-            <ion-button shape="round" class="person-edit-profile" fill="outline" (click)="openAboutMe()" >Edit Profile</ion-button>
+            <div class="person-title">I am interested in joining the Restvo team and learn more as a software engineering intern.</div>
+            <ion-button class="person-edit-profile md button button-small button-round button-outline ion-activatable ion-focusable hydrated" fill="outline" shape="round" (click)="openAboutMe()" >Edit Profile</ion-button>
           </div>
         </ion-item>
       </ion-card>
     </ion-row>
-
-    <!-- Complete your Profile Banner -->
-    <ion-row class="profile-row">
+      <!-- Complete your Profile Banner -->
+    <ion-row class="profile-row" *ngIf="view === 'profile'">
       <ion-card [routerLink]="['/app/completeprofile']" class="profile-card" *ngIf="userData.user && (!userData.user.avatar || authService.incompleteOnboardProcess || (platform.is('cordova') && !userData.user.importContactList && !userData.delayImportContactListReminder) || (!userData.user.enablePushNotification && !userData.delayPushNotificationReminder))" [ngClass]="{'mobile-card': platform.width() < 768}">
         <ion-item-sliding>
           <ion-item lines="none">
@@ -103,11 +104,51 @@
 
     <ion-grid class="content-grid" *ngIf="view === 'profile'">
       <ion-row>
+        <!--List My Journey-->
+        <ion-col *ngIf="journeys && journeys.length" [size]="(platform.width() >= 768) && (journeys.length <= 6) ? 6 : 12" [ngStyle]="{'padding': platform.width() >= 768 ? '6px 5px' : '6px 0'}">
+          <ion-card class="ion-no-margin ion-no-padding section-card" [ngClass]="{'mobile-card': platform.width() < 768}">
+            <ion-item class="section" lines="none"> <!--section header-->
+              <ion-label class="section-label" color="darkgrey">My Journey</ion-label>
+              <ion-button slot="end" [routerLink]="['../choose/5e9f46e1c8bf1a622fec69d5']" fill="clear">
+                <ion-icon name="add"></ion-icon>
+              </ion-button>
+            </ion-item>
+            <ion-slides class="program-slides" [options]="{slidesPerView: 2.2, grabCursor: true, updateOnWindowResize: true}" *ngIf="platform.width() < 768">
+              <ion-slide class="program-slide" *ngFor="let journey of journeys; trackBy: customTrackBy" [hidden]="!((journey.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || journey.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))">
+                <ion-card class="program-card" (click)="openProgram($event, journey)">
+                  <ion-card-header class="ion-no-padding">
+                    <div class="program-photo-container">
+                      <img class="program-photo" [src]="(journey.assets && journey.assets.length && journey.assets[0]) | background: journey._id" />
+                    </div>
+                  </ion-card-header>
+                  <div class="program-name">{{journey.matrix_string[0][0]}}</div>
+                </ion-card>
+              </ion-slide>
+            </ion-slides>
+            <ion-grid *ngIf="platform.width() >= 768">
+              <ion-row class="ion-justify-content-start">
+                <ion-col class="ion-align-self-center grid-col" *ngFor="let journey of journeys; trackBy: customTrackBy" [hidden]="!((journey.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || journey.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))" size="auto">
+                  <ion-card class="grid-program-card" (click)="openProgram($event, journey)">
+                    <ion-card-header class="ion-no-padding">
+                      <div class="program-photo-container">
+                        <img class="program-photo" [src]="(journey.assets && journey.assets.length && journey.assets[0]) | background: journey._id" />
+                      </div>
+                    </ion-card-header>
+                    <div class="program-name">{{journey.matrix_string[0][0]}}</div>
+                  </ion-card>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-card>
+        </ion-col>
         <!--List My Mentors-->
         <ion-col *ngIf="myMentors && myMentors.length" [size]="(platform.width() >= 768) && (myMentors.length <= 2) ? 6 : 12" [ngStyle]="{'padding': platform.width() >= 768 ? '6px 5px' : '6px 0'}">
           <ion-card class="ion-no-margin ion-no-padding section-card" [ngClass]="{'mobile-card': platform.width() < 768}">
             <ion-item class="section" lines="none"> <!--section header-->
               <ion-label class="section-label" color="darkgrey">My Mentors</ion-label>
+              <ion-button slot="end" [routerLink]="['../choose/5e9fe372c8bf1a622fec69d8', { joinAs: 'user_list_1' }]" fill="clear">
+                <ion-icon name="add"></ion-icon>
+              </ion-button>
             </ion-item>
             <ion-slides class="relationship-slides" [options]="{slidesPerView: 2.8, grabCursor: true, updateOnWindowResize: true}" *ngIf="platform.width() < 768">
               <ion-slide class="relationship-slide" *ngFor="let relationship of myMentors; trackBy: customTrackBy;" [hidden]="!(relationship.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || relationship.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase()))">
@@ -174,6 +215,9 @@
           <ion-card class="ion-no-margin ion-no-padding section-card" [ngClass]="{'mobile-card': platform.width() < 768}">
             <ion-item class="section" lines="none"> <!--section header-->
               <ion-label class="section-label" color="darkgrey">My Mentees</ion-label>
+              <ion-button slot="end" [routerLink]="['../choose/5e9fe372c8bf1a622fec69d8', { joinAs: 'user_list_3' }]" fill="clear">
+                <ion-icon name="add"></ion-icon>
+              </ion-button>
             </ion-item>
             <ion-slides class="relationship-slides" [options]="{slidesPerView: 2.8, grabCursor: true, updateOnWindowResize: true}" *ngIf="platform.width() < 768">
               <ion-slide class="relationship-slide" *ngFor="let relationship of myMentees; trackBy: customTrackBy;" [hidden]="!(relationship.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || relationship.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase()))">
@@ -235,11 +279,51 @@
             </ion-grid>
           </ion-card>
         </ion-col>
+        <!--List My Groups-->
+        <ion-col *ngIf="groups && groups.length" [size]="(platform.width() >= 768) && (groups.length <= 6) ? 6 : 12" [ngStyle]="{'padding': platform.width() >= 768 ? '6px 5px' : '6px 0'}">
+          <ion-card class="ion-no-margin ion-no-padding section-card" [ngClass]="{'mobile-card': platform.width() < 768}">
+            <ion-item class="section" lines="none"> <!--section header-->
+              <ion-label class="section-label" color="darkgrey">My Groups</ion-label>
+              <ion-button slot="end" [routerLink]="['../choose/5e9fe35cc8bf1a622fec69d7']" fill="clear">
+                <ion-icon name="add"></ion-icon>
+              </ion-button>
+            </ion-item>
+            <ion-slides class="program-slides" [options]="{slidesPerView: 2.2, grabCursor: true, updateOnWindowResize: true}" *ngIf="platform.width() < 768">
+              <ion-slide class="program-slide" *ngFor="let group of groups; trackBy: customTrackBy" [hidden]="!((group.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || group.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))">
+                <ion-card class="program-card" (click)="openProgram($event, group)">
+                  <ion-card-header class="ion-no-padding">
+                    <div class="program-photo-container">
+                      <img class="program-photo" [src]="(group.assets && group.assets.length && group.assets[0]) | background: group._id" />
+                    </div>
+                  </ion-card-header>
+                  <div class="program-name">{{group.matrix_string[0][0]}}</div>
+                </ion-card>
+              </ion-slide>
+            </ion-slides>
+            <ion-grid *ngIf="platform.width() >= 768">
+              <ion-row class="ion-justify-content-start">
+                <ion-col class="ion-align-self-center grid-col" *ngFor="let group of groups; trackBy: customTrackBy" [hidden]="!((group.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || group.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))" size="auto">
+                  <ion-card class="grid-program-card" (click)="openProgram($event, group)">
+                    <ion-card-header class="ion-no-padding">
+                      <div class="program-photo-container">
+                        <img class="program-photo" [src]="(group.assets && group.assets.length && group.assets[0]) | background: group._id" />
+                      </div>
+                    </ion-card-header>
+                    <div class="program-name">{{group.matrix_string[0][0]}}</div>
+                  </ion-card>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-card>
+        </ion-col>
         <!--List My Community-->
         <ion-col *ngIf="programs && programs.length" [size]="(platform.width() >= 768) && (programs.length <= 6) ? 6 : 12" [ngStyle]="{'padding': platform.width() >= 768 ? '6px 5px' : '6px 0'}">
           <ion-card class="ion-no-margin ion-no-padding section-card" [ngClass]="{'mobile-card': platform.width() < 768}">
             <ion-item class="section" lines="none"> <!--section header-->
               <ion-label class="section-label" color="darkgrey">My Community</ion-label>
+              <ion-button slot="end" [routerLink]="['/app/create/community', { categoryId: '5c915324e172e4e64590e346' }]" fill="clear">
+                <ion-icon name="add"></ion-icon>
+              </ion-button>
             </ion-item>
             <ion-slides class="program-slides" [options]="{slidesPerView: 2.2, grabCursor: true, updateOnWindowResize: true}" *ngIf="platform.width() < 768">
               <ion-slide class="program-slide" *ngFor="let program of programs; trackBy: customTrackBy" [hidden]="!((program.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || program.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))">
@@ -270,6 +354,7 @@
           </ion-card>
         </ion-col>
 
+        <!--System Notifications-->
         <ion-col *ngIf="!noSystemMessage" size-xs="12" size-sm="12" size-md="6" [ngStyle]="{'padding': platform.width() >= 768 ? '6px 5px' : '6px 0'}">
           <ion-card class="ion-no-margin ion-no-padding" [ngClass]="{'mobile-card': platform.width() < 768}">
             <ion-item class="section" lines="none" *ngIf="platform.width() >= 768"> <!--section header-->
