--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -13,11 +13,6 @@ app-dashboard {
     }
   }
 
-  ion-spinner {
-    position: absolute;
-    margin: 48%;
-  }
-
 /*  ion-list-header, ion-item, ion-card {
     background: transparent !important;
   }*/
@@ -69,23 +64,6 @@ app-dashboard {
   .image-cropper {
     width: 120px;
     height: 120px;
-    overflow: hidden;
-    border-radius: 50%;
-    margin: 2% auto 0 auto;
-  }
-
-  .custom-avatar {
-    object-fit: cover;
-    border-radius: 50%;
-    width: 100%;
-    height: 100%;
-  }
-
-  .user-name {
-    display: inline-block;
-    font-size: large;
-    font-weight: bold;
-    color: var(--ion-color-secondary);
   }
 
   .current-date-display {
@@ -94,15 +72,6 @@ app-dashboard {
     font-weight: normal;
     color: var(--ion-color-secondary);
     margin-top: 3%;
-  }
-
-  .user-info {
-    width: 100%;
-  }
-
-  .user-info-buttons {
-    min-width: 40%;
-    margin: 0 auto;
   }
 
   .profile-tag {
@@ -466,38 +435,39 @@ app-dashboard {
   }
 
   .person-content-left {
-    // margin: 8px 12.5px 21px 0;
-    // width: 40%;
-    // height: 44px;
-    // line-height: 100%;
     width: 100%;
     padding-left: 25px;
+    display: -webkit-box;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
     flex-direction: column;
-    // justify-content: space-between;
   }
 
   .person-name {
     width: 183px;
     height: 23px;
-    font-family: 'Roboto', sans-serif;
+    
+    font-family: Roboto;
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
     line-height: 23px;
+    
+    color: #000000;
+    
   }
   .person-content-container {
     margin-left: 18px;
   }
 
   .person-title {
-    //width: 183px;
     height: 28px;
+    overflow: hidden;
     font-size: 12px;
     line-height: 14px;
-    overflow: hidden;
-    margin: 8px 0px 16px 0px;
-    color: var(--ion-color-darkgrey);
+    margin: 8px 0 16px;
+    color: rgba(0, 0, 0, 0.6);
   }
 
   .profile-row {
@@ -506,7 +476,7 @@ app-dashboard {
 
   .profile-card {
     width: 100%;
-    margin: 0 5px;
+    margin: 0 0px;
     padding: 10px 0;
   }
 
@@ -526,9 +496,20 @@ app-dashboard {
     color: var(--ion-color-darkgrey);
   }
 
+  .person-button {
+    // position: absolute;
+    width: 183px;
+    height: 26px;
+    background: #FFFFFF;
+    border: 1px solid #E2666A;
+    box-sizing: border-box;
+    border-radius: 20px;
+  }
+
   .section {
     --min-height: 26px;
     --background: transparent;
+    --inner-padding-end: 0;
 
     .section-label {
       font-size: 15px;
