applied full height

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,10 @@ app-root {
     transform: translateY(-115px);
   }*/
 
+  app-showrecipientinfo {
+    height: 100%;
+  }
+
   .split-pane-narrow {
     width: 70%;
     border-right: var(--border);
