added sorting carrots to the top of each column

--- a/src/app/pages/feature/editparticipants/editparticipants.page.html
+++ b/src/app/pages/feature/editparticipants/editparticipants.page.html
@@ -59,10 +59,13 @@
       <ion-item lines="none">
         <ion-label (click)="sortDisplay('participant')">
           Current Participants
+          <ion-icon [name]="participantAscending === true ? 'chevron-down-outline' : 'chevron-up-outline'"></ion-icon>
         </ion-label>
         <ion-label (click)="sortDisplay('role')">
           Role
+          <ion-icon [name]="roleAscending === true ? 'chevron-down-outline' : 'chevron-up-outline'"></ion-icon>
         </ion-label>
+        
       </ion-item>
       <ion-item
         *ngFor="let user of uniqueParticipantList; index as j"
